apps/website/dashy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
        - name: dashy
          image: lissy93/dashy:3.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: dashy
              containerPort: 80
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - node
                - /app/services/healthcheck
            initialDelaySeconds: 40
            periodSeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - name: config
              mountPath: /app/public
      volumes:
        - name: config
          configMap:
            name: dashy-config
            items:
              - key: config
                path: conf.yml
