apps/website/dashy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
spec:
  selector:
    app: dashy
  ports:
    - port: 4000
      protocol: TCP
      targetPort: dashy
  sessionAffinity: None
  type: ClusterIP
